# inout-agent

./: .gitignore  Cargo.toml  clippy.toml  deny.toml  rustfmt.toml
.cargo/: config.toml
.inout/sessions/: session.jsonl
crates/inout/: Cargo.toml
crates/inout-core/: Cargo.toml
crates/inout-core/src/: config.rs  extension.rs  hooks.rs  jail.rs  lib.rs  scripting.rs  tools.rs  types.rs
crates/inout-core/tests/: integration.rs  scripting.rs
crates/inout-ext-sessions/: Cargo.toml
crates/inout-ext-sessions/.inout/sessions/: session.jsonl
crates/inout-ext-sessions/src/: commands.rs  compaction.rs  continuity.rs  entry.rs  jsonl_repo.rs  lib.rs  repo.rs
crates/inout-ext-skills/: Cargo.toml
crates/inout-ext-skills/skills/: default.md
crates/inout-ext-skills/src/: budget.rs  commands.rs  lib.rs  loader.rs  scope.rs  skill.rs  trace.rs  trigger.rs
crates/inout-testing/: Cargo.toml
crates/inout-testing/src/: lib.rs
crates/inout/.inout/sessions/: session.jsonl
crates/inout/src/: history.rs  lib.rs  llm.rs  main.rs  state.rs  tui.rs
crates/inout/tests/: agent.rs  history.rs  state.rs
extensions/: bash.rhai  commands.rhai  context.rhai  edit.rhai  fullview.rhai  glob.rhai  grep.rhai  read.rhai  write.rhai
openspec/changes/archive/2026-07-21-extension-first-rewrite/: proposal.md  tasks.md
openspec/changes/archive/2026-07-21-initial-scaffold/: proposal.md  tasks.md
openspec/changes/archive/2026-07-21-streaming-tui-system-prompt/: proposal.md  tasks.md
openspec/changes/archive/2026-07-21-tui-visual-redesign/: proposal.md  tasks.md
openspec/specs/code-index/: spec.md
openspec/specs/context/: spec.md
openspec/specs/core/: spec.md
openspec/specs/extensions/: spec.md
openspec/specs/linting/: spec.md
openspec/specs/llm-client/: spec.md
openspec/specs/mcp/: spec.md
openspec/specs/observability/: spec.md
openspec/specs/scripting/: spec.md
openspec/specs/security/: spec.md
openspec/specs/sessions/: spec.md
openspec/specs/skills/: spec.md
spec/: index.md  v1.0.md  v2.0-extensions.md  v2.1-observability.md  v2.10-scripting.md  v2.2-skills.md  v2.3-context.md  v2.4-security.md  v2.5-sessions.md  v2.6-code-index.md  v2.7-mcp.md  v2.8-linting.md  v2.9-llm-client.md
src/: config.rs  history.rs  jail.rs  lib.rs  llm.rs  main.rs  state.rs  tui.rs
src/tools/: bash.rs  edit.rs  grep.rs  mod.rs  read.rs  write.rs
tests/: agent.rs  history.rs  jail.rs  state.rs
