[workspace]
members = [
    "crates/inout-core",
    "crates/inout-ext-sessions",
    "crates/inout-ext-skills",
    "crates/inout-testing",
    "crates/inout",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.75"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
missing_debug_implementations = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
cargo = { level = "allow", priority = -1 }

enum_glob_use = "deny"
unwrap_used = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
unimplemented = "deny"
wildcard_imports = "deny"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tempfile = "3"
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
